--- a/Project-1/BusinessLogic/BusinessLogic.csproj
+++ b/Project-1/BusinessLogic/BusinessLogic.csproj
@@ -18,4 +18,9 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DataFluentApi\DataFluentApi.csproj" />
+    <ProjectReference Include="..\Models\Models.csproj" />
+  </ItemGroup>
+
 </Project>
