--- a/Project-1/DataFluentApi/DataFluentApi.csproj
+++ b/Project-1/DataFluentApi/DataFluentApi.csproj
@@ -21,4 +21,8 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="6.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Models\Models.csproj" />
+  </ItemGroup>
+
 </Project>
